# drc20-operator

./: Cargo.toml  README.md  test.json.exampe
src/: dogecoin.rs  main.rs
